--- a/smartdns/smartdns.conf
+++ b/smartdns/smartdns.conf
@@ -117,9 +117,11 @@ audit-size 64K
 audit-num 1
 
 # 分流解析
+nameserver /.xiaonuo.in/xiaonuo
 nameserver /.xiaonuo.live/xiaonuo
 nameserver /.danxiaonuo.com/xiaonuo
 nameserver /.danxiaonuo.me/xiaonuo
+nameserver /.iflyelf.com/xiaonuo
 conf-file /etc/smartdns/smartdns_custom.conf
 conf-file /etc/smartdns/smartdns_xiaonuo_domain.conf
 conf-file /etc/smartdns/smartdns_gfw_domain.conf
