--- a/smartdns/smartdns.conf
+++ b/smartdns/smartdns.conf
@@ -40,12 +40,11 @@ server-https https://[2400:3200::1]/dns-query -group xiaonuo -http-host dns.alid
 
 # 国外服务器
 server-https https://dns.bebasid.com/dns-query -group gwf -exclude-default-group
-server-https https://dns.de.futuredns.eu.org/dns-query -group gwf -exclude-default-group
 server-https https://ada.openbld.net/dns-query -group gwf -exclude-default-group
 server-https https://dns.rabbitdns.org/dns-query -group gwf -exclude-default-group
-server-https https://dns.seia.io/dns-query -group gwf -exclude-default-group
 server-https https://dnsforge.de/dns-query -group gwf -exclude-default-group
 server-https https://dns.momou.ch/dns-query -group gwf -exclude-default-group
+# server-https https://dns.xiaonuo.live/dns-query -group gwf -exclude-default-group
 
 # TCP链接空闲超时时间
 # tcp-idle-time [second]
@@ -81,7 +80,7 @@ force-qtype-SOA 65
 # 禁止 IPv6解析
 # 强制AAAA地址返回SOA
 # force-AAAA-SOA [yes|no]
-force-AAAA-SOA yes
+force-AAAA-SOA no
 
 # 启用IPV4，IPV6双栈IP优化选择策略
 # dualstack-ip-selection-threshold [num] (0~1000)
@@ -95,6 +94,14 @@ dualstack-ip-selection no
 rr-ttl 0
 rr-ttl-min 0
 rr-ttl-max 0
+
+# nftset配置
+# nftset 超时设置
+nftset-timeout yes
+
+# ipset配置
+# ipset 超时设置
+ipset-timeout yes
 
 # 设置日志级别
 # log-level: [level], level=fatal, error, warn, notice, info, debug
@@ -116,12 +123,11 @@ audit-file /var/log/smartdns-audit.log
 audit-size 64K
 audit-num 1
 
-# 分流解析
-nameserver /.xiaonuo.in/xiaonuo
-nameserver /.xiaonuo.live/xiaonuo
-nameserver /.danxiaonuo.com/xiaonuo
-nameserver /.danxiaonuo.me/xiaonuo
-nameserver /.iflyelf.com/xiaonuo
+# 域名集合 分流解析
+domain-set -name xiaonuo -file /etc/smartdns/smartdns_xiaonuo_domain_list.conf
+domain-rules /domain-set:xiaonuo/ -speed-check-mode tcp:443,tcp:80 -nameserver xiaonuo -dualstack-ip-selection no -no-serve-expired -no-cache -response-mode first-ping
+domain-set -name gwf -file /etc/smartdns/smartdns_gfw_domain_list.conf
+domain-rules /domain-set:gwf/ -speed-check-mode tcp:443,tcp:80 -address #6 -nameserver gwf -dualstack-ip-selection no -no-serve-expired -no-cache -response-mode first-ping
+
+# 附加配置文件
 conf-file /etc/smartdns/smartdns_custom.conf
-conf-file /etc/smartdns/smartdns_xiaonuo_domain.conf
-conf-file /etc/smartdns/smartdns_gfw_domain.conf
