--- a/smartdns/smartdns.conf
+++ b/smartdns/smartdns.conf
@@ -125,9 +125,11 @@ audit-num 1
 
 # 域名集合 分流解析
 domain-set -name xiaonuo -file /etc/smartdns/smartdns_xiaonuo_domain_list.conf
-domain-rules /domain-set:xiaonuo/ -speed-check-mode tcp:443,tcp:80 -nameserver xiaonuo -dualstack-ip-selection no -no-serve-expired -no-cache -response-mode first-ping
+# domain-rules /domain-set:xiaonuo/ -speed-check-mode tcp:443,tcp:80 -nameserver xiaonuo -dualstack-ip-selection no -no-serve-expired -no-cache -response-mode first-ping
+domain-rules /domain-set:xiaonuo/ -speed-check-mode tcp:443,tcp:80 -nameserver xiaonuo -dualstack-ip-selection no -no-serve-expired -response-mode first-ping
 domain-set -name gwf -file /etc/smartdns/smartdns_gfw_domain_list.conf
-domain-rules /domain-set:gwf/ -speed-check-mode tcp:443,tcp:80 -address #6 -nameserver gwf -dualstack-ip-selection no -no-serve-expired -no-cache -response-mode first-ping
+# domain-rules /domain-set:gwf/ -speed-check-mode tcp:443,tcp:80 -address #6 -nameserver gwf -dualstack-ip-selection no -no-serve-expired -no-cache -response-mode first-ping
+domain-rules /domain-set:gwf/ -speed-check-mode tcp:443,tcp:80 -nameserver gwf -dualstack-ip-selection no -no-serve-expired -response-mode first-ping
 
 # 附加配置文件
 conf-file /etc/smartdns/smartdns_custom.conf
